# rest-api-client-framework

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  justfile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: poetry-test.yml  python-app.yml  python-publish.yml  test.yml
api_client/: __init__.py  constants.py  endpoint.py  exception.py  logger.py  payload.py  request.py  response.py
attic/: Makefile
attic/tests/: test_local_httpbin.py  test_with_httpbin.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
docs/html/: __init__.html
docs/pages/: changelog.rst  code.rst  contributing.rst
docs/tests/: __init__.html  test_endpoint.html
example/: example_client.py
gawsoft/api_client/: __init__.py  exception.py  request.py  response.py
scratch/: generic.py  model-test.py  path-tesat.py  pydantic-test.py  wtf-async.py
technitium_rac/: cli.py  configurator.py
tests/: __init__.py  conftest.py  docker-compose.yml  test_endpoint.py  test_github_httpbin.py  test_local_httpbin.py  test_request.py  test_response.py  test_with_httpbin.py
