[project]
name = "rest-api-client-framework"
description = "Generic Rest Api Client Framework"
license = "MIT"
version = "0.1.2-dev7"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
  'urllib3 (>=2.2.2,<3.0.0)',
  'requests (>=2.32.3,<3.0.0)',
  'pydantic[dotenv,mypy] (>=2.8.0,<3.0.0)',
  'asyncio (>=3.4.3,<4.0.0)'
]

[tool.poetry]
packages = [
    { include = "api_client"}
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.11"
wemake-python-styleguide = "^1.4"
flake8-pytest-style = ">=1.6,<3.0"
black = "^25.0"
isort = "^6.0"
pytest-cov = "^6.0.0"
coverage-badge = "^1.1.1"
types-requests = "^2.32.0.20250328"
pytest-httpserver = "^1.0.0"
pyfakefs = "^5.8"
pytest-docker = "^3.1.1"
doc8 = "^2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.0"
sphinx_mdinclude = "^0.6.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
yaml-settings-pydantic = {git = "https://github.com/acederberg/pydantic-settings-yaml.git", rev = "2.3.1"}
pdoc3 = "^0.11.6"
loguru = "^0.7.2"

[build-system]
requires = ['poetry-core (>=2.0)']
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
